20181024 - completed mini projects

--- a/index.html
+++ b/index.html
@@ -12,42 +12,49 @@
         <div class="small-6 columns">
             <h1 class="text-center">YOU</h1>
             <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
+                <div class="healthbar text-center" 
+                     style="background-color: green; margin: 0; color: white;"
+                     :style="{width : maxPlayerHealth + '%'}">
+                    {{ maxPlayerHealth }}
                 </div>
             </div>
         </div>
         <div class="small-6 columns">
             <h1 class="text-center">MONSTER</h1>
             <div class="healthbar">
-                <div class="healthbar text-center" style="background-color: green; margin: 0; color: white;">
-
+                <div class="healthbar text-center" 
+                    style="background-color: green; margin: 0; color: white;"
+                    :style="{width : maxMonsterHealth + '%'}">
+                    {{ maxMonsterHealth }}
                 </div>
             </div>
         </div>
     </section>
-    <section class="row controls">
+    <section class="row controls" v-if="!isRunning">
         <div class="small-12 columns">
-            <button id="start-game">START NEW GAME</button>
+            <button id="start-game" @click="startGame">START NEW GAME</button>
         </div>
     </section>
-    <section class="row controls">
-        <div class="small-12 columns">
-            <button id="attack">ATTACK</button>
-            <button id="special-attack">SPECIAL ATTACK</button>
-            <button id="heal">HEAL</button>
-            <button id="give-up">GIVE UP</button>
-        </div>
-    </section>
-    <section class="row log">
-        <div class="small-12 columns">
-            <ul>
-                <li>
-
-                </li>
-            </ul>
-        </div>
-    </section>
+    <template v-else>
+        <section class="row controls">
+            <div class="small-12 columns">
+                <button id="attack" @click="attackMove">ATTACK</button>
+                <button id="special-attack" @click="specialAttackMove">SPECIAL ATTACK</button>
+                <button id="heal" @click="heal">HEAL</button>
+                <button id="give-up" @click="giveUp">GIVE UP</button>
+            </div>
+        </section>
+        <section class="row log" v-if="logs.length > 0">
+            <div class="small-12 columns">
+                <ul>
+                    <li v-for="log in logs">
+                        <p :class="{'player-turn' : log.isPlayer, 'monster-turn' : !log.isPlayer}">{{ log.message }}</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </template>
 </div>
+<script src="js/app.js"></script>
 </body>
 </html>
